--- a/Heroes3Editor/Resources/lang.en-US.xaml
+++ b/Heroes3Editor/Resources/lang.en-US.xaml
@@ -3,6 +3,7 @@
                     xmlns:v="clr-namespace:System;assembly=mscorlib">
 
     <!-- Main window -->
+    <!-- ReSharper disable once InconsistentNaming -->
     <v:String x:Key="main_Title">HoMM3 SaveGame Editor</v:String>
     <v:String x:Key="main_MenuFile">_File</v:String>
     <v:String x:Key="main_MenuOpen">_Open</v:String>
@@ -24,6 +25,8 @@
     
     <!-- HeroPanel -->
     <v:String x:Key="hero_PrimarySkills">Primary Skills</v:String>
+    <v:String x:Key="hero_Level">Level</v:String>
+    <v:String x:Key="hero_Experience">Exp</v:String>
     <v:String x:Key="hero_Attack">Attack</v:String>
     <v:String x:Key="hero_Defense">Defense</v:String>
     <v:String x:Key="hero_SpellPower">Spell Power</v:String>
@@ -84,6 +87,8 @@
     <v:String x:Key="hero_ArtifactInfoLuck">Luck:</v:String>
     <v:String x:Key="hero_ArtifactInfoEffects">Effects:</v:String>
     <v:String x:Key="hero_Add">Add</v:String>
+    <v:String x:Key="hero_Up">Up</v:String>
+    <v:String x:Key="hero_Down">Down</v:String>
     <v:String x:Key="hero_Remove">Remove</v:String>
     <v:String x:Key="hero_RemoveAll">Remove All</v:String>
     <v:String x:Key="hero_Confirm">Confirm</v:String>
@@ -92,6 +97,9 @@
     <v:String x:Key="hero_ItemSlotsNotAvailable">{0} Item slots are not available</v:String>
     <v:String x:Key="hero_RingSlotsNotAvailable">Ring slots not available</v:String>
     <v:String x:Key="hero_SlotNotAvailable">Slot '{0}' not available</v:String>
+    <v:String x:Key="hero_AddsSpell">Adds spell '{0}' to Spell Book</v:String>
+    <v:String x:Key="hero_ArtifactSpellInfo">(*) Spell came from an Artifact or a Spell Scroll (could not be added or removed here)</v:String>
+    <v:String x:Key="hero_OccupiedBy">Occupied by part of '{0}'</v:String>
     
     <!-- Modal -->
     <v:String x:Key="modal_SelectSpell">Select Spell</v:String>
@@ -100,5 +108,5 @@
     <v:String x:Key="modal_Artifact">Artifact:</v:String>
     <v:String x:Key="modal_Spell">Spell:</v:String>
     <v:Double x:Key="modal_LabelWidth">50</v:Double>
-
+    
 </ResourceDictionary>
